# filson

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ast.rs  error.rs  filson_grammar.pest  lib.rs  utils.rs
src/actors/: actors.rs  helpers.rs  mod.rs  top_level_actors.rs
src/actors/traits/: definitions.rs  impls.rs  mod.rs
src/ast/: ast.rs  extraction_utils.rs  extraction_utils_cached.rs  extraction_utils_uncached.rs  mod.rs
src/integrations/: mod.rs  serde_value.rs
src/parser/: ast_generation.rs  mod.rs  test_parser_rules.rs  utils.rs
src/traits/: appliable.rs  extractable.rs  mod.rs
src/types/: data_node.rs  mod.rs  op.rs
tests/: integration_test.rs
tests/setup/: mod.rs
